# ld-linkage-mapper

./: README.md  filter_high_ld_variants.sh  map_variants_to_participants.py  pyproject.toml
legacy/: query_ld_proxy.sh
src/ld_linkage_mapper.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/ld_mapper/: __init__.py  filter.py  mapper.py  proxy.py
tests/: test_filter.py  test_mapper.py  test_proxy.py
