[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ld-linkage-mapper"
version = "2.0.0"
description = "LD proxy discovery, filtering, and participant-level variant mapping via the NCI LDlink API."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Ugur Tuna"}]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 120
